--- a/about.html
+++ b/about.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>My Website</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>About: Phillip Grider</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -10,49 +13,64 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg border-bottom max-width p-0 mt-0" style="background-color: #ffffff">
-        <div class="d-flex flex-wrap container p-0 mx-auto" style="width: 960px;color: #777777;">
-            <div class="mr-auto">
-                <h1 class="navbar-brand text-truncate text-center p-3 py-3 m-0 name " style="background-color: #4aaaa5; color: white;">Phillip Grider</h1>
+    <nav class="row m-0 p-0 sticky-top border-bottom" id="header">
+        <div class="container col p-0">
+            <div class="container row mx-auto p-0">
+                <span class="col-xl-3 col-lg-3 col-md-4 col-sm-12 navbar-brand m-0 px-0 py-4 h1 text-center" id="name">Phillip
+                    Grider</span>
+                    <div class="cod-xl-6 col-lg-9 col-md-8 col-12 px-0" style="">
+                        <ul class="row justify-content-md-end justify-content-sm-center justify-content-center m-0 py-4">
+                            <a class="nav-link active" href="about.html">About</a>
+                            <a class="nav-link border-left border-right" href="portfolio.html">Portfolio</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </ul>
+                    </div>
             </div>
-                <div class="text-center nav-item">
-                    <a class="nav-item nav-link nav-color" href="about.html">About <span class="sr-only">(current)</span></a>
-                </div>
-                <div class="text-center nav-item border-left border-right">
-                    <a class="nav-item nav-link nav-color" href="portfolio.html">Portfolio</a>
-                </div>
-                <div class="text-center nav-item pl-0">
-                    <a class="nav-item nav-link pr-0 nav-color" href="contact.html">Contact</a>
-                </div>
-            </div>
+        </div>
     </nav>
-    <div class="container jumbotron mx-auto mt-4 p-4 border" style="width: 960px; background-color: #ffffff">
-        <section class="">
-            <div class="row m-0 p-3 border-bottom">
-                <h2 class="about-me">About Me</h2>
-            </div>
-            <div>
-                <img class="float-left mr-3 mb-3" src="assets/images/Selfie.png" alt="Selfie">
-                <p class="space mt-4">My name is Phillip Grider and I am the sole proprietor of Integrated Logic Solutions and
-                    my company is what's known in my industry (Audio Visual Control Integration) as a Crestron Services Provider.
-                    You may ask yourself, if not from my industry, what does that mean?</p>
-                <p class="space">I provide a service to both manufactures and audio visual contracting firms as a certified Crestron
-                    programmer to configure, program and setup systems in a vast range of disciplins. I not only program a control
-                    system but also the Digital Signal Processors(DSP) to insure the room sounds as goods as it functions.</p>
-                <p class="space">As a secondary role in my company Integrated Logic Solutions we provide installation Supervisor
-                    Services to IMAX Corporation. This job role provides an installation service to IMAX for new Cinema startups.
-                    We provide onsite supervision of the projection and sound systems an IMAX theater. Travel is definetly in
-                    the job description. The question is what continent have I not been on.</p>
-            </div>
+    <div class="container mx-auto mb-5 mt-4 p-0">
+        <section class="border p-3 mx-auto mb-5" id="main-section">
+                <div class="row m-2 mb-2 border-bottom">
+                    <h2 class="col mt-4">About Me</h2>
+                </div>
+                <div class="col-md-12 m-2 p-2 m-0">
+                    <div class="row p-2">
+                        <div class="col-lg-3 col-md-4 col-sm-12 col-12 p-0">
+                            <img class="row img-fluid m-auto" src="assets/images/Selfie.jpg" alt="Selfie">
+                        </div>
+                        <div class="col-md-8 pl-2">
+                            <p>My name is Phillip Grider and I am the sole proprietor of Integrated Logic Solutions and my company is what's
+                             known in my industry (Audio Visual Control Integration) as a Crestron Services Provider. You may ask yourself,
+                             if not from my industry, what does that mean?</p>
+                        </div>
+                    <!-- </div> -->
+                    <!-- <div class="row"> -->
+                        <p class="col col-md-12 p-0">I provide a service to both manufactures and audio visual contracting firms as a certified Crestron
+                            programmer to configure, program and setup systems in a vast range of disciplins. I not only program a control
+                            system but also the Digital Signal Processors(DSP) to insure the room sounds as goods as it functions.</p>
+                    <!-- </div> -->
+                    <!-- <div class="row"> -->
+                        <p class="col-12 p-0">As a secondary role in my company Integrated Logic Solutions we provide installation Supervisor Services
+                            to IMAX Corporation. This job role provides an installation service to IMAX for new Cinema startups. We provide
+                            onsite supervision of the projection and sound systems an IMAX theater. Travel is definetly in the job description.
+                            The question is what continent have I not been on.</p>
+                    </div>
+                </div>
     
         </section>
     </div>
-    <footer class="fixed-bottom p-5 mw-100 footer text-center" style="background-color: #777777">
+    <footer class="fixed-bottom mw-100 text-center" id="footer">
         <div></div>
         <div class="fixed-bottom copyright">
-            Copyright &#169;
+            Copyright ©
         </div>
     </footer>
+
+
+
+
+
+
 
 
 </body>
