--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="assets/css/style.css">
+  </head>
 <body>
-        <div class="d-flex flex-wrap bd-highlight mb-3">
-          <div class="p-2 bd-highlight">Flex item</div>
-          <div class="p-2 bd-highlight">Flex item</div>
-          <div class="p-2 bd-highlight">Flex item</div>
+    <nav class="row sticky-top m-0 border-bottom" id="header">
+        <div class="container col p-0">
+            <div class="container row align-items-center mx-auto p-0" id="topbar">
+                <span class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12 m-0 px-0 py-2 text-center" id="name">Phillip
+                    Grider</span>
+                <div class="col-xl-8 col-lg-9 col-md-8 col-sm-12 col-12 justify-content-sm-center justify-content-lg-end" style="">
+                    <ul class="text-lg-right m-0">
+                        <a class="nav-item pr-2 active" href="about.html">About</a>
+                        <a class="nav-item border-left border-right px-2" href="portfolio.html">Portfolio</a>
+                        <a class="nave-item pl-2" href="contact.html">Contact</a>
+                    </ul>
+                </div>
+            </div>
         </div>
-        
-        <div class="d-flex flex-wrap bd-highlight mb-3">
-          <div class="mr-auto p-2 bd-highlight">Flex item</div>
-          <div class="p-2 bd-highlight">Flex item</div>
-          <div class="p-2 bd-highlight">Flex item</div>
-        </div>
-        
-        <div class="d-flex flex-wrap bd-highlight mb-3">
-          <div class="p-2 bd-highlight">Flex item</div>
-          <div class="p-2 bd-highlight">Flex item</div>
-          <div class="ml-auto p-2 bd-highlight">Flex item</div>
-        </div>
+    </nav>
 </body>
 </html>
