--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
                     Grider</span>
                     <div class="cod-xl-6 col-lg-9 col-md-8 col-12 px-0" style="">
                         <ul class="row justify-content-md-end justify-content-sm-center justify-content-center m-0 py-4">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="Index.html">About</a>
                             <a class="nav-link border-left border-right active" href="portfolio.html">Portfolio</a>
                             <a class="nav-link" href="contact.html">Contact</a>
                         </ul>
